--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
+    "homepage" : "https://neerajcode34.github.io/Todo_App/"
+
   },
   "scripts": {
     "start": "react-scripts start",
